# ontoKIT

./: .gitignore  README.md  guidance_test.py  pyproject.toml  test.py
evaluation/evaluation_metrics/learning_accuracy/: main.py
evaluation/evaluation_metrics/precision_recall/: main.py
examples/: extract.py
src/ontokit/: __init__.py
src/ontokit/engines/constrained_generation/: main.py
src/ontokit/engines/constrained_generation/prompt_templates/: extract_value_from_text copy.jinja2  extract_value_from_text.jinja2
src/ontokit/engines/finetuded_llm_generation/: test.py
src/ontokit/utils/: types_definition copy.yaml  types_definition.yaml
